# beautiful_numbers

./: .gitignore
beautiful_numbers_function/: CMakeLists.txt  beautiful_numbers.cpp  beautiful_numbers.h  main.cpp
beautiful_numbers_half_buffer/: .clang-tidy  CMakeLists.txt  beautiful_numbers.cpp  beautiful_numbers.h  main.cpp
beautiful_numbers_model/: CMakeLists.txt  beautiful_numbers.cpp  beautiful_numbers.h  main.cpp
beautiful_numbers_one_file/: .clang-format  CMakeLists.txt  beautiful_numbers.cpp
